respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Material_Request__c.object
<CustomObject>
    <fields>
        <fullName>BOM_Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOM Relation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Component_Item__c</field>
                <operation>equals</operation>
                <valueField>BOM_Relation__c.Input_Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BOM_Relation__c</referenceTo>
        <relationshipLabel>Material Requests</relationshipLabel>
        <relationshipName>Material_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Code__c</fullName>
        <formula>Component_Item__r.Sourcing_Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Item Code&quot; inside &quot;Component Item&quot;</inlineHelpText>
        <label>Component Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Item__c</fullName>
        <label>Component Item</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Material Requests</relationshipLabel>
        <relationshipName>Material_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Component_UOM__c</fullName>
        <formula>TEXT(Component_Item__r.Unit_of_measure__c)</formula>
        <inlineHelpText>As found inside &quot;Unit of measure&quot; inside &quot;Component Item&quot;</inlineHelpText>
        <label>Component UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Plan</label>
        <referenceTo>Production_Order__c</referenceTo>
        <relationshipLabel>Material Requests</relationshipLabel>
        <relationshipName>Material_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <formula>(Production_Plan__r.Output_Units__c  *  Units_Comp_Units_Output__c) * (1 +  Rejection__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(1 + &quot;Rejection&quot;) x &quot;Units Comp./Units Output&quot; x &quot;Output Units&quot; from &quot;Production Plan&quot;</inlineHelpText>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection__c</fullName>
        <formula>BOM_Relation__r.Rejection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;% Rejection&quot; inside &quot;BOM Relation&quot;</inlineHelpText>
        <label>% Rejection</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Units_Comp_Units_Output__c</fullName>
        <formula>BOM_Relation__r.Uds_Input_Ud_Output__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Units Comp./ Units Output&quot; inside &quot;BOM Relation&quot;</inlineHelpText>
        <label>Units Comp./Units Output</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Material Request</label>
    <nameField>
        <displayFormat>MRP-{00000}</displayFormat>
        <label>Material Request Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>